# projetAnnuel

./: .gitignore  README.md  requirements.txt
CppIA/: CMakeLists.txt  arrayLib.cpp  fonctionnalite.h  header.h  library.cpp  linearModel.cpp  main.cpp  mlp.cpp  mlp.h  rbf.cpp  rbf.h  saveNload.cpp  structCollection.cpp
Save/: 20200818.json  linear_model_classification_2021718153740.json  linear_model_classification_2021718164115.json  linear_model_regression_2021718163039.json  linear_model_regression_2021718163439.json  linear_model_regression_2021718163838.json  linear_model_regression_202171816485.json  mlp_192_4_4_3_classification_2021717121844.json  mlp_192_4_4_3_classification_2021717122714.json  mlp_192_4_4_3_classification_202171714425.json  mlp_192_4_4_3_classification_2021717231620.json  mlp_192_4_4_3_classification_2021717234046.json  mlp_192_4_4_4_3_classification_2021717234158.json  mlp_192_4_4_4_3_classification_2021717234718.json  mlp_192_8_8_3_classification_2021714143744.json  mlp_192_8_8_3_classification_20217171211.json  mlp_192_8_8_3_classification_202171712125.json  mlp_192_8_8_3_classification_202171712176.json  mlp_1_3_1_regression_2021713122434.json  mlp_1_3_1_regression_20217141420.json  mlp_2_2_1_classification_2021713122434.json  mlp_2_2_1_classification_202171414159.json  mlp_classification_192_4_4_3_2021718223120.json  mlp_classification_2_2_1_202171816254.json  mlp_classification_2_2_1_202171816367.json  mlp_regression_1_3_1_2021718163242.json  mlp_regression_1_3_1_202171816358.json
data/: ProjetAnnuel.xlsx  csv_files.csv
python/: mlp.py  (+6 more)
(+17 files in other folders)
